# packman

./: Cargo.toml  README.en.md  README.md  todo.md
.github/workflows/: build.yml
demo/: pack.toml
src/: cli.rs  common.rs  lib.rs  main.rs  models.rs  operations.rs  security.rs
tests/integration/: mod.rs  package_ops.rs  test_helpers.rs
