[package]
name = "beepkg"
version = "0.1.0"
edition = "2024"
description = "A simple package management system based on s3 compatible storage."

[dependencies]
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
tempfile = "3.10"
base64 = "0.21"
bytes = "1.0"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
rand = "0.8"
anyhow = "1.0"
zip = "0.6"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.11"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.10"
sha2 = "0.10"
rusty-s3 = "0.7.0"
thiserror = "1.0"
reqwest = { version = "0.12.15", features = ["json"] }
quick-xml = { version = "0.37.5", features = ["serde"] }
url = "2.5.4"
semver = "1.0.22"
